--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,13 +16,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <a> 
-        <th>Movie Title</th>
-      </a>
+      <a> Movie Title </a>
       <th>Rating</th>
-      <a>
-        <th>Release Date</th>
-      </a>
+      <a> Release Date </a>
       <th>More Info</th>
     </tr>
   </thead>
