--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,9 +16,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <a> Movie Title </a>
+      <ta> Movie Title </ta>
       <th>Rating</th>
-      <a> Release Date </a>
+      <ta> Release Date </ta>
       <th>More Info</th>
     </tr>
   </thead>
