--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,9 +16,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <ta> Movie Title </ta>
+      <th id="title_header"> Movie Title </th>
       <th>Rating</th>
-      <ta> Release Date </ta>
+      <th id="release_date_header"> Release Date </th>
       <th>More Info</th>
     </tr>
   </thead>
