--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,9 +16,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <ta> <th id="title_header"> Movie Title </th> </ta>
+      <%= {params[:sort] == "title" ? {:class => "hilite"} : {}}= link_to "Movie Title", movies_path(:sort => "title_sort"), :id => "title_header" %>
       <th>Rating</th>
-      <ta> <th id="release_date_header"> Release Date </th> </ta>
+      <ta id="release_date_header"> <th> Release Date </th> </ta>
       <th>More Info</th>
     </tr>
   </thead>
