--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -18,7 +18,7 @@
     <tr>
       <th> <%= link_to "Movie Title", movies_path(:sort => "title_sort"), :id => "title_header" %> </th>
       <th>Rating</th>
-      <th id="release_date_header"> <th> Release Date </th> </th>
+      <th> <%= link_to "Release Date", movies_path(:sort => "date_sort"), :id => "release_date_header" %> </th>
       <th>More Info</th>
     </tr>
   </thead>
