--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,9 +16,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th> <%= link_to "Movie Title", movies_path(:sort => "title_sort"), :id => "title_header" %> </th>
+      <th> <%= link_to "Movie Title", movies_path(:sort => "title_sort"), :id => "title_header", class:'hilite'%> </th>
       <th>Rating</th>
-      <th> <%= link_to "Release Date", movies_path(:sort => "date_sort"), :id => "release_date_header" %> </th>
+      <th> <%= link_to "Release Date", movies_path(:sort => "date_sort"), :id => "release_date_header", class:'hilite'%> </th>
       <th>More Info</th>
     </tr>
   </thead>
