--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -16,8 +16,8 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th> 
-        <%= class=<%= params[:sort] == "title_sort"? "p-3 mb-2 bg-warning"%>, link_to "Movie Title", movies_path(:sort => "title_sort"), :id => "title_header", class:'hilite'%>  
+      <th class="<%= 'p-3 mb-2 bg-warning' if params[:sort] == "title_sort" %>"> 
+        <%=link_to "Movie Title", movies_path(:sort => "title_sort"), :id => "title_header", class:'hilite'%>  
       </th>
       <th>Rating</th>
       <th> <%= link_to "Release Date", movies_path(:sort => "date_sort"), :id => "release_date_header", class:'hilite'%> </th>
