--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -20,7 +20,9 @@
         <%=link_to "Movie Title", movies_path(:sort => "title_sort"), :id => "title_header", class:'hilite'%>  
       </th>
       <th>Rating</th>
-      <th> <%= link_to "Release Date", movies_path(:sort => "date_sort"), :id => "release_date_header", class:'hilite'%> </th>
+      <th class="<%= 'p-3 mb-2 bg-warning' if params[:sort] == "title_sort" %>"> 
+        <%= link_to "Release Date", movies_path(:sort => "date_sort", :ratings => @ratings_to_show), :id => "release_date_header", class:'hilite'%> 
+      </th>
       <th>More Info</th>
     </tr>
   </thead>
