--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -21,7 +21,7 @@
       </th>
       <th>Rating</th>
       <th class="<%= 'p-3 mb-2 bg-warning' if params[:sorted_date] == "1"  %>"> 
-        <%= link_to "Release Date", movies_path(:sort => "date_sort"), :id => "release_date_header", class:'hilite'%> 
+        <%= link_to "Release Date", movies_path(:sort => "date_sort", :ratings => Hash[@ratings_to_show.map {|x| [x, 1]}]), :id => "release_date_header", class:'hilite'%> 
       </th>
       <th>More Info</th>
     </tr>
